# Elec3D

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: component.frag  component.vert  cube.frag  cube.vert  pcb.frag  pcb.vert  wire.frag
src/: layout.json  main.cpp
src/circuit/: Circuit.cpp  Circuit.h
src/commands/: AddComponentCommand.cpp  AddComponentCommand.h  ChangeLayerCommand.cpp  ChangeLayerCommand.h  ChangeTypeCommand.cpp  ChangeTypeCommand.h  Command.h  ConnectCommand.cpp  ConnectCommand.h  DeleteComponentCommand.cpp  DeleteComponentCommand.h  EditPropertyCommand.cpp  EditPropertyCommand.h  MoveComponentCommand.cpp  MoveComponentCommand.h
src/io/: LayoutSerializer.cpp  LayoutSerializer.h
src/renderer/: Camera.h  MeshBuilder.cpp  MeshBuilder.h  Renderer.cpp  Renderer.h  WireRenderer.cpp  WireRenderer.h
src/sim/: MNASolver.cpp  MNASolver.h  TransientSolver.cpp  TransientSolver.h
